third_party/move/move-compiler-v2/tests/lambda/inline-parity/eq_inline.lambda.exp

Diagnostics:
warning: Unused parameter `f`. Consider removing or prefixing with an underscore: `_f`
  ┌─ tests/lambda/inline-parity/eq_inline.move:3:13
  │
3 │     fun foo(f: |&u64|) {
  │             ^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/eq_inline.move:7:13
  │
7 │           foo(|v| {
  │ ╭─────────────^
8 │ │             v == &1;
9 │ │         });
  │ ╰─────────^
